--- a/pages/style.css
+++ b/pages/style.css
@@ -1,5 +1,5 @@
 @font-face {
-	font-family: 'OpenSans';
+	font-family: 'Pixeloid Mono';
 	src: url('../asset//pixeloid-font/PixeloidSans.ttf');
 	src: url('../asset//pixeloid-font/PixeloidSansBold.ttf');
 	font-weight: 400;
